Fixed jumping behavior when collapsing groups containing empty child elements

--- a/src/scss/_toolbox-section.scss
+++ b/src/scss/_toolbox-section.scss
@@ -16,6 +16,10 @@
         &:first-child {
             margin-top: 0;
         }
+
+        li:first-child {
+            margin-top: 1rem;
+        }
     }
 
     &__title {
